fixing navbar z-index clip mask bug

--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ img {
   height: 100vh;
   position: relative;
   color: #fff;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
+  /* clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%); */
+  z-index: 10;
 }
 
 .hero .content {
